# better-github-desktop

./: README.md  bts.jsonc  package.json  tsconfig.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_commands.rs  config.rs  error.rs  lib.rs
apps/desktop/src-tauri/src/auth/: error.rs  mod.rs
apps/desktop/src-tauri/src/repo/: branch.rs  clone.rs  commit.rs  error.rs  file.rs  mod.rs  remote.rs  staging.rs  status.rs
apps/desktop/src-tauri/src/utils/: error.rs  from_error_macro.rs  mod.rs  store_helper.rs
apps/desktop/src/components/: header.tsx  loader.tsx  protected-route.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  tabs.tsx  textarea.tsx
apps/desktop/src/lib/: axios.ts  constants.ts  env.ts
apps/desktop/src/modules/auth/api/: github-login.ts  tauri-auth-api.ts
apps/desktop/src/modules/auth/components/: feature-row.tsx  login-page.tsx
apps/desktop/src/modules/auth/hooks/: use-github-login.ts
apps/desktop/src/modules/branches/api/: tauri-branch-api.ts
apps/desktop/src/modules/branches/components/: branch-manager.tsx  (+1 more)
apps/desktop/src/providers/: auth-provider.tsx  query-provider.tsx
apps/desktop/src/routes/: __root.tsx  choosegitclient.tsx  index.tsx  login.tsx
apps/desktop/src/store/: github-client.ts
apps/desktop/src/utils/: open-folder.ts  sleep.ts
(+37 files in other folders)
