[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri = { version = "2.9.5", features = [] }

# Plugins
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
